[gd_scene load_steps=23 format=3 uid="uid://ft4p3e207tyt"]

[ext_resource type="StyleBox" uid="uid://dq5lxbipyxcyu" path="res://Assets/background.tres" id="1_pt1ru"]
[ext_resource type="PackedScene" uid="uid://dd30axi4gohbt" path="res://World/world.tscn" id="1_rh14k"]
[ext_resource type="Script" uid="uid://bxis6xu6brqtj" path="res://HUD/hud.gd" id="1_t8dka"]
[ext_resource type="Texture2D" uid="uid://dtjpdpas216yq" path="res://Assets/sprites.png" id="3_pt1ru"]
[ext_resource type="FontFile" uid="uid://buwtlt7xugo8b" path="res://Assets/JetBrains.ttf" id="4_0noqu"]
[ext_resource type="PackedScene" uid="uid://myg80b6k1npu" path="res://World/tooltip.tscn" id="4_jllm8"]
[ext_resource type="Script" uid="uid://ce7v3jykrukdw" path="res://HUD/end_screen.gd" id="5_8q743"]
[ext_resource type="Script" uid="uid://di3g6iy465jjn" path="res://HUD/energy_bar.gd" id="6_0noqu"]
[ext_resource type="Shader" uid="uid://c05r1pi3j8dpm" path="res://HUD/fill.gdshader" id="7_5if7l"]
[ext_resource type="Script" uid="uid://bhqhjfhmlmut3" path="res://HUD/arrow.gd" id="7_pxv5b"]
[ext_resource type="AudioStream" uid="uid://b4fa4fqc20u3s" path="res://Assets/Sounds/transition.wav" id="8_ckxo8"]
[ext_resource type="Script" uid="uid://d0lgfd0wmmnna" path="res://HUD/item_tooltips.gd" id="9_5ofep"]
[ext_resource type="PackedScene" uid="uid://bydlvdo8wwmn" path="res://Menus/transition.tscn" id="10_s7atv"]
[ext_resource type="AudioStream" uid="uid://dkbouf2ixhxe4" path="res://Assets/Sounds/bomb.wav" id="10_yhwer"]
[ext_resource type="AudioStream" uid="uid://cda7xlv3awjb6" path="res://Assets/Sounds/pickup.wav" id="11_sj3ig"]

[sub_resource type="LabelSettings" id="LabelSettings_s7atv"]
font = ExtResource("4_0noqu")
font_size = 32

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sj3ig"]
resource_local_to_scene = true
shader = ExtResource("7_5if7l")
shader_parameter/fill_col = Color(0.22, 0.22, 0.22, 1)
shader_parameter/enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_s7atv"]
atlas = ExtResource("3_pt1ru")
region = Rect2(16, 32, 8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_sj3ig"]
font = ExtResource("4_0noqu")
font_size = 32

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
resource_local_to_scene = true
atlas = ExtResource("3_pt1ru")
region = Rect2(24, 24, 8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_sweqy"]
font = ExtResource("4_0noqu")
font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
resource_local_to_scene = true
atlas = ExtResource("3_pt1ru")
region = Rect2(24, 24, 8, 8)

[node name="Interface" type="Control" groups=["UI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8dka")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -10

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_pt1ru")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/PanelContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
physics_object_picking = true
size = Vector2i(1042, 628)
size_2d_override = Vector2i(112, 64)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="VBoxContainer/HBoxContainer/PanelContainer/SubViewportContainer/SubViewport"]

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/PanelContainer/SubViewportContainer/SubViewport/Node2D" instance=ExtResource("4_jllm8")]

[node name="World" parent="VBoxContainer/HBoxContainer/PanelContainer/SubViewportContainer/SubViewport/Node2D" instance=ExtResource("1_rh14k")]
unique_name_in_owner = true

[node name="EndScreen" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("5_8q743")

[node name="Reveal" type="AudioStreamPlayer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen"]
stream = ExtResource("8_ckxo8")

[node name="Failed" type="AudioStreamPlayer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen"]
stream = ExtResource("10_yhwer")

[node name="Success" type="AudioStreamPlayer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen"]
stream = ExtResource("11_sj3ig")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="BaseStat" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer/BaseStat"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage Taken"
label_settings = SubResource("LabelSettings_s7atv")

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer/BaseStat"]
layout_mode = 2
label_settings = SubResource("LabelSettings_s7atv")

[node name="Stats" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BaseChallenge" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer/BaseChallenge"]
layout_mode = 2
size_flags_horizontal = 3
text = "No Damage"
label_settings = SubResource("LabelSettings_s7atv")

[node name="Texture" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer/BaseChallenge"]
material = SubResource("ShaderMaterial_sj3ig")
layout_mode = 2
texture = SubResource("AtlasTexture_s7atv")
expand_mode = 3
stretch_mode = 5

[node name="Challenges" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Binds" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/Binds"]
layout_mode = 2
size_flags_horizontal = 3
text = "[R]estart"
label_settings = SubResource("LabelSettings_sj3ig")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/Binds"]
layout_mode = 2
size_flags_horizontal = 3
text = "[N]ext"
label_settings = SubResource("LabelSettings_sj3ig")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer/EndScreen/VBoxContainer/Binds"]
layout_mode = 2
size_flags_horizontal = 3
text = "[L]evels"
label_settings = SubResource("LabelSettings_sj3ig")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -10

[node name="ItemOne" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_pt1ru")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemOne"]
layout_mode = 2

[node name="TexOne" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemOne/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_hqtel")
expand_mode = 5
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemOne/VBoxContainer"]
layout_mode = 2
text = "[ J ]"
label_settings = SubResource("LabelSettings_sweqy")
horizontal_alignment = 1

[node name="ItemTwo" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_pt1ru")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTwo"]
layout_mode = 2

[node name="TexTwo" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTwo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_i3pqv")
expand_mode = 5
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ItemTwo/VBoxContainer"]
layout_mode = 2
text = "[ K ]"
label_settings = SubResource("LabelSettings_sweqy")
horizontal_alignment = 1

[node name="Energy" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("1_pt1ru")
script = ExtResource("6_0noqu")
no_energy_col = Color(0.22745098, 0.19607843, 0.46666667, 1)
current_energy = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Energy"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EnergyBase" type="ColorRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/Energy/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 0

[node name="EnergyContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Energy/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Arrow" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_pt1ru")
script = ExtResource("7_pxv5b")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Arrow"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/VBoxContainer/Arrow/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
gui_disable_input = true
size = Vector2i(80, 80)
render_target_update_mode = 4

[node name="Sprite" type="Sprite2D" parent="VBoxContainer/HBoxContainer/VBoxContainer/Arrow/SubViewportContainer/SubViewport"]
position = Vector2(40, 40)
scale = Vector2(10, 10)
texture = ExtResource("3_pt1ru")
region_enabled = true
region_rect = Rect2(8, 24, 8, 8)

[node name="TooltipContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_pt1ru")

[node name="TooltipLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/TooltipContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("4_0noqu")
bbcode_enabled = true

[node name="ItemTooltips" type="Node" parent="."]
script = ExtResource("9_5ofep")

[node name="Transition" parent="." instance=ExtResource("10_s7atv")]
visible = false
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[node name="Action" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_sj3ig")

[connection signal="restarted" from="VBoxContainer/HBoxContainer/PanelContainer/SubViewportContainer/SubViewport/Node2D/World" to="." method="_on_world_restarted"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemOne/VBoxContainer/TexOne" to="ItemTooltips" method="_on_tex_one_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemOne/VBoxContainer/TexOne" to="ItemTooltips" method="_on_tex_one_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemTwo/VBoxContainer/TexTwo" to="ItemTooltips" method="_on_tex_two_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/ItemTwo/VBoxContainer/TexTwo" to="ItemTooltips" method="_on_tex_two_mouse_exited"]
